--- a/Riskvalve/Views/AssetRegister/Asset.cshtml
+++ b/Riskvalve/Views/AssetRegister/Asset.cshtml
@@ -38,20 +38,20 @@
                 <table id="assetTable" class="table table-bordered" style="width: 100%;">
                     <thead>
                         <tr>
-                            <th>No</th>
-                            <th>Tag No</th>
-                            <th>Business Area</th>
-                            <th>Platform</th>
-                            <th>Valve Type</th>
-                            <th>Size (inch)</th>
+                            <th style="text-align: center;">No</th>
+                            <th data-column-name="TagNo" style="text-align: center;">Tag No</th>
+                            <th data-column-name="BusinessArea" style="text-align: center;">Business Area</th>
+                            <th data-column-name="Platform" style="text-align: center;">Platform</th>
+                            <th data-column-name="ValveType" style="text-align: center;">Valve Type</th>
+                            <th data-column-name="Size" style="text-align: center;">Size (inch)</th>
                             <th class="noshow">Equipment Name</th>
                             <th class="noshow">Status</th>
                             <th class="noshow">Actuation</th>
-                            <th>Class Rating</th>
-                            <th>Parent Equipment No</th>
-                            <th>Parent Equipment Description</th>
+                            <th data-column-name="ClassRating" style="text-align: center;">Class Rating</th>
+                            <th data-column-name="ParentEquipmentNo" style="text-align: center;">Parent Equipment No</th>
+                            <th data-column-name="ParentEquipmentDescription" style="text-align: center;">Parent Equipment Description</th>
                             <th class="noshow">Installation Date</th>
-                            <th>PID Number</th>
+                            <th data-column-name="PIDNo" style="text-align: center;">PID Number</th>
                             <th class="noshow">Cost of Replacement & Repair (USD)</th>
                             <th class="noshow">Usage Type</th>
                             <th class="noshow">Manufacturer</th>
@@ -67,10 +67,10 @@
                             <th class="noshow">Operating Temperature (F)</th>
                             <th class="noshow">Operating Pressure (Psig)</th>
                             <th class="noshow">Flow Rate (m3/hr)</th>
-                            <th>Service Fluid</th>
+                            <th data-column-name="ServiceFluid" style="text-align: center;">Service Fluid</th>
                             <th class="noshow">Fluid Phase</th>
                             <th class="noshow">Toxic or Flamable Fluid</th>
-                            <th class="notexport"></th>
+                            <th style="text-align: center;" class="notexport"></th>
                         </tr>
                     </thead>
                 </table>
