--- a/Riskvalve/Views/Home/Detail.cshtml
+++ b/Riskvalve/Views/Home/Detail.cshtml
@@ -183,9 +183,9 @@
                                                         <td class="noshow">@item.TP1C</td>
                                                         <td class="noshow">@item.TP2C</td>
                                                         <td class="noshow">@item.TP3C</td>
-                                                        <td class="havebgcolor">@item.TP1Risk</td>
-                                                        <td class="havebgcolor">@item.TP2Risk</td>
-                                                        <td class="havebgcolor">@item.TP3Risk</td>
+                                                        <td class="nowrap havebgcolor">@item.TP1Risk</td>
+                                                        <td class="nowrap havebgcolor">@item.TP2Risk</td>
+                                                        <td class="nowrap havebgcolor">@item.TP3Risk</td>
                                                         <td class="nowrap">@item.IntegrityStatus</td>
                                                         <td class="nowrap">@item.RecommendationAction</td>
                                                         <td class="nowrap export-html" real-val="@item.TPTimeToActionRisk"><span style="display: none;">@timeToAction</span>@item.TPTimeToActionRisk</td>
@@ -348,7 +348,7 @@
                                 <div class="form-group ">
                                     <label for="field-inspection-date">Inspection Date</label>
                                     <input id="field-inspection-date" type="text"
-                                        class="form-control datepicker" name="InspectionDate"
+                                        class="form-control" name="InspectionDate"
                                         readonly/>
                                 </div>
                                 <div class="form-group ">
@@ -526,7 +526,7 @@
                                 <div class="form-group ">
                                     <label for="field-maintenance-date">Maintenance Date</label>
                                     <input id="field-maintenance-date" type="text"
-                                        class="form-control datepicker" name="MaintenanceDate" readonly/>
+                                        class="form-control" name="MaintenanceDate" readonly/>
                                 </div>
                                 <div class="form-group ">
                                     <label for="field-maintenance-repaired">Is Valve Repaired</label>
