--- a/Riskvalve/Views/Home/Detail.cshtml
+++ b/Riskvalve/Views/Home/Detail.cshtml
@@ -59,7 +59,7 @@
                         <table class="table table-bordered datatable" style="width: 100%;">
                             <thead>
                                 <tr>
-                                    <th class="nowrap" style="text-align: center;">No</th>
+                                    <th class="nowrap nosort" style="text-align: center;">No</th>
                                     <th class="nowrap" style="text-align: center;">Business Unit Area</th>
                                     <th class="nowrap" style="text-align: center;">Platform</th>
                                     <th class="nowrap" style="text-align: center;">Valve Tag No</th>
@@ -119,7 +119,7 @@
                                     <th class="noshow" style="text-align: center;">LoF Score-Failure of function TP3</th>
                                     <th class="noshow" style="text-align: center;">LoF Score-Passing accross valve TP3</th>
                                     <th class="noshow" style="text-align: center;">CoF Score</th>
-                                    <th class="notexport" style="width:300px">Detail</th>
+                                    <th class="notexport nosort" style="width:300px">Detail</th>
                                 </tr>
                             </thead>
                             <tbody id="table-detail">
