--- a/Riskvalve/Views/Assessment/PrintAssessment.cshtml
+++ b/Riskvalve/Views/Assessment/PrintAssessment.cshtml
@@ -93,7 +93,7 @@
             </tr>
             <tr>
                 <td colspan="3">Date for Integrity Recommendation :</td>
-                <td colspan="3">@assessment.TPTimeToActionRisk</td>
+                <td colspan="3">@assessment.TimeToAction</td>
             </tr>
             <tr>
                 <td style="vertical-align: top;" colspan="6" rowspan="2">
