add update latest

--- a/Riskvalve/Views/Assessment/Index.cshtml
+++ b/Riskvalve/Views/Assessment/Index.cshtml
@@ -80,6 +80,9 @@
                                                 <button type="button" class="btn btn-block btn-danger delete-button" id="btn-delete" onclick="deleteForm(this)"><i class="bi bi-trash"></i> Delete</button>
                                             </div>
                                         </div>
+                                        <div id="record-info" class="recordinfo">
+                                            <small id="record-meta" class="recordmeta pull-right-small-gray"></small>
+                                        </div>
                                     </div>
                                     <div class="col-lg-10">
                                         <div class="assessment-content-card card-group-valveproperties first-in-group active">
