--- a/Riskvalve/Views/Maintenance/Index.cshtml
+++ b/Riskvalve/Views/Maintenance/Index.cshtml
@@ -193,6 +193,9 @@
                                             <button type="button" class="btn delete-button form-submit" id="btn-submit"
                                                 onclick="deleteForm(this)">Delete</button>
                                         </div>
+                                        <div id="record-info" class="recordinfo">
+                                            <small id="record-meta" class="recordmeta pull-right-small-gray"></small>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
