--- a/Riskvalve/Views/User/Index.cshtml
+++ b/Riskvalve/Views/User/Index.cshtml
@@ -147,6 +147,11 @@
                     </div>
                 </div>
             </form>
+            <div class="modal-footer modalinfo">
+                <div id="record-info">
+                    <small id="record-meta" class="pull-right-small-gray"></small>
+                </div>
+            </div>
         </div>
     </div>
 </div>
