--- a/Riskvalve/Views/Maintenance/Index.cshtml
+++ b/Riskvalve/Views/Maintenance/Index.cshtml
@@ -184,7 +184,36 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <div class="subheader m-0">
+                                    <b>Record Information</b>
+                                </div>
+                                <div class="sub-container">
+                                    <div class="form-container">
+                                        <div class="form-grid">
+                                            <div class="form-group">
+                                                <label for="field-inspection-valvetagno">Created By</label>
+                                                <input id="createdby" class="form-control form-control-sm" disabled/>
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="field-inspection-valvetagno">Created At</label>
+                                                <input id="createdat" class="form-control form-control-sm" disabled/>
+                                            </div>
+                                        </div>
+                                        <div class="form-grid">
+                                            <div class="form-group">
+                                                <label for="field-inspection-valvetagno">Updated By</label>
+                                                <input id="updatedby" class="form-control form-control-sm" disabled/>
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="field-inspection-valvetagno">Updated At</label>
+                                                <input id="updatedat" class="form-control form-control-sm" disabled/>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="non-printable">
                                         <div class="box-footer">
                                             <button type="button" class="btn submit-button form-submit" id="btn-submit"
                                                 onclick="submitForm(this)">Save</button>
