--- a/Riskvalve/Views/Login/Index.cshtml
+++ b/Riskvalve/Views/Login/Index.cshtml
@@ -62,6 +62,7 @@
     <input type="hidden" id="requestVerificationToken" value="@tokens.RequestToken">
 </body>
 @section Scripts {
-    <script src="~/js/recaptcha.api.js" async defer></script>
+    @* <script src="~/js/recaptcha.api.js" async defer></script> *@
+    <script src="https://www.google.com/recaptcha/api.js?render=6LcvJSIqAAAAACnY6Gqwz6AhE9SAzrPbSPQ8meUd" async defer></script>
     <script src="~/js/login/index.js" asp-append-version="true"></script>
 }
